Restored Java 8 bytecode so the plugin loads in stock Fiji